styled main container

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,3 +24,11 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+.container{
+  width:450px;
+  margin:auto;
+  background: white;
+  height:140px;
+
+}
