--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -51,6 +51,7 @@
   float: right;
   padding-right: 10px;
   padding-top: 10px;
+  display:inline;
 }
 
 #tweets p {
@@ -71,10 +72,10 @@
 
 #tweets .icons{
   display: none;
-  padding-top :5px;
-  padding-right :3px;
+  padding-top: 2%;
+  padding-right :3%;
   width: 30px;
-  height: 30px;
+  height: 35px;
   float: right;
 }
 #tweets article:hover .icons {
